Replace `prova` old repository

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-repository: sonormusiceditions/prova
+repository: sonormusiceditions/sonormusiceditions.github.io
 
 title: SONOR MUSIC EDITIONS
 tagline: Record label dedicated to Italian Music Libraries from the 1970s
